--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
     <!-- js -->
     <script defer  src="js/index.js"></script>
+        <script src="js/lightbox_pro.js"></script>
+
     <script src="js/acordionClass.js"></script>
     <script src="js/accordion.js"></script>
     <script src="js/slideClass.js"></script>
@@ -114,7 +116,7 @@
 
         <section class="container-fluid quotesSection">
             <div class="container ">
-                <div class="d-flex ">
+                <div class="d-flex justify-content-md-center ">
                     <div>
 
                         <div class="quoteImg">
@@ -177,7 +179,7 @@
                     <h3>Cato SASE Cloud</h3>
                     <p>The technology that helps TAG Heuer Porsche Formula E Team to stay secure and connected at speed
                     </p>
-                    <button class="btn">Learn more</button>
+                    <button class="btn ">Learn more</button>
                 </div>
             </div>
         </section>
@@ -366,19 +368,16 @@
     <script src="js/slick.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript">
         $(document).on('ready', function () {
-
             $(".regular").slick({
                 dots: true,
                 infinite: true,
                 slidesToShow: 3,
                 slidesToScroll: 3
             });
-
         });
     </script>
     <script src="js/accordion.js" type="text/javascript"></script>
        <!-- lightBox -->
-       <script src="js/lightbox_pro.js"></script>
 </body>
 
 </html>
